# EntelechySystem

./: .gitignore  CMakeLists.txt  main.cpp
.idea_c/: misc.xml  modules.xml
.idea_c/inspectionProfiles/: Project_Default.xml
CppEntelechySystem/Core/: Storage.cpp
CppEntelechySystem/Core/Agent/: Agent.cpp
CppEntelechySystem/Core/Machine/: NeedsMachine.cpp  NeedsMachine.h
CppEntelechySystem/Core/Object/: Object.cpp  Object.h
CppEntelechySystem/Core/Tasks/: TaskManager.cpp  TaskManager.h
CppEntelechySystem/Core/Unit/: BaseMachine.cpp  BaseMachine.h  CanvasUnit.cpp  ContentUnit.cpp  GateUnit.h  ReadUnit.h  ReceiverUnit.cpp  ReceiverUnit.h  SenderUnit.h
EntelechySystem/Core/: CanvasUnit.py  FunctionManager.py  GateUnit.py  Neure.py  Project.py  Storage.py  Task.py  TaskManager.py  __init__.py
EntelechySystem/Core/Unit/: __init__.py
EntelechySystem/World/: NeuroNetwork.py
PyEntelechySystem/: __init__.py
PyEntelechySystem/Core/: Lingo.py  Need.py  Neure.py  SystemLayer.py  Unit.py  __init__.py
PyEntelechySystem/Core/Base/: BaseContent.py  BaseObject.py  BaseUnit.py  __init__.py
PyEntelechySystem/Core/Content/: Content.py  __init__.py
PyEntelechySystem/Core/Device/: CoinDevice.py  ProcessDevice.py
PyEntelechySystem/Core/Function/: FunctionOperateProcess.py  __init__.py
PyEntelechySystem/Core/Machine/: NeedMachine.py  OperateMachine.py  StateMachine.py  __init__.py
PyEntelechySystem/Core/Neure/: Neure.py  __init__.py
PyEntelechySystem/Core/Object/: BaseObject.py
PyEntelechySystem/Core/Unit/: BaseUnit.py  CanvasUnit.py  ConnectUnit.py  ReadUnit.py  ReceiverUnit.py  SenderUnit.py  Units.py  WriteUnit.py  __init__.py
PyEntelechySystem/KnowledgeBase/: __init__.py
PyEntelechySystem/Model/: __init__.py
Scripts/: main.cpp  main.py
src/: FunctionManager.cpp  FunctionManager.h  SystemLayer.h  main.cpp
src/Core/: Storage.cpp  Storage.h
src/Core/Agent/: Agent.h
src/Core/Content/: Content.cpp  Content.h
src/Core/KnowledgeBase/: KnowledgeManager.h
src/Core/Lingo/: Lingo.cpp  Lingo.h
src/Core/Machine/: AddressUnit.cpp  AddressUnit.h  BaseMachine.cpp  BaseMachine.h  MachineCollection.h  NeedsPerceptionMachine.cpp  NeedsPerceptionMachine.h  ReadUnit.cpp  ReadUnit.h  ReceiverMachine.cpp  ReceiverMachine.h  ReceiverUnit.cpp  ReceiverUnit.h  SenderMachine.cpp  SenderMachine.h  SenderUnit.cpp  SenderUnit.h  WriteUnit.h
src/Core/Neure/: Neure.h
src/Core/Object/: Object.cpp  Object.h
src/Core/Tasks/: Task.cpp  Task.h  TaskManager.cpp
src/Core/Unit/: AddressUnit.cpp  AddressUnit.h  BaseUnit.cpp  BaseUnit.h  CanvasUnit.h  ContentUnit.h  NeuUnit.cpp  ReadUnit.cpp  ReadUnit.h  ReceiverUnit.cpp  ReceiverUnit.h  SenderUnit.cpp  SenderUnit.h  WriteUnit.cpp  WriteUnit.h
src/KnowledgeBase/: KnowledgeManager.cpp
src/Neure/: Neure.cpp  Neure.h
src/Tasks/: BaseTask.h  TaskManager.h
src/Unit/: BaseUnit.h  CanvasUnit.h  GateUnit.cpp  NeuUnit.h
src/World/: CreateNeuroNetwork.cpp  CreateNeuroNetwork.h
src/main.dSYM/Contents/Resources/DWARF/: main
